--- a/src/app/modules/core/archicteture/generic/crud/crud.component.html
+++ b/src/app/modules/core/archicteture/generic/crud/crud.component.html
@@ -2,7 +2,7 @@
 	<app-form
 	></app-form>
 </div>
-<div *ngIf="!isFormulario">
+<div *ngIf="isListing">
 	<app-list 
 		[service]="service"
 		[sortColumns]="sortColumns"
@@ -11,5 +11,6 @@
 		[disableEdit]="disableEdit"
 		[disableRemove]="disableRemove"
 		[pageOptions]="pageOptions"
+		(isListing)="setListing($event)"
 	></app-list>
 </div>
