Finalização dos cruds, ajustes gerais

--- a/frontend-server-web-angular/src/main/webapp/app/modules/operacao/incidente/incidente.component.html
+++ b/frontend-server-web-angular/src/main/webapp/app/modules/operacao/incidente/incidente.component.html
@@ -1,10 +1,8 @@
 <app-crud 
-    [service]="mudancaService"
+    [service]="incidenteService"
     [sortColumns]="sortColumns"
     [columns]="columns"
     [filterField]="filterField"
     [formConfig]="formConfig"
-    [masterDetail]="true"
-    [detailFormConfig]="detailFormConfig"
     [model]="model">
 </app-crud>
