--- a/frontend-server-web-angular/src/main/webapp/app/app.component.html
+++ b/frontend-server-web-angular/src/main/webapp/app/app.component.html
@@ -11,8 +11,8 @@
 
   <footer class="main-footer">
     <div class="float-right d-none d-sm-block">
-      <b>Version</b> 3.0.5
+      <b>Versão</b> 1.0.0
     </div>
-    <strong>Copyright &copy; 2014-2020 <a href="#">AdminLTE.io</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2020 <a href="#">Sistema Isac</a>.</strong> All rights reserved.
   </footer>
 </div>
